deployments/node-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: node-app-green
  name: node-app-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app-green
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-app-green
        color: green  # Added new label color: green
    spec:
      containers:
      - image: us-central1-docker.pkg.dev/iit-cc/iit-cc/node-app:3.2.0
        name: node-app
        resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: node-app-green  # Updated app label to node-app-green
  name: node-app-service-green  # Updated name to node-app-service-green
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: node-app-green  # Updated app label to node-app-green
  type: NodePort
status:
  loadBalancer: {}
