deployments/node-version-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: node-app
    version: "green"
  name: node-app-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
      version: "green"
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-app
        version: "green"
    spec:
      containers:
      - image: us-central1-docker.pkg.dev/iit-cc/iit-cc/node-app:3.2.0
        name: node-app
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: node-app
  name: node-app-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: node-app
    version: "green"
  type: NodePort
status:
  loadBalancer: {}
