deployments/svc-green.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: node-app
  name: node-app-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: node-app
    version: "green"
  type: NodePort
status:
  loadBalancer: {}
