deployments/node-ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - path: /node(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: node-app-service-green
            port:
              number: 8080
